--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         rows="10"
       ></textarea>
       <label for="item-image">Item image link</label>
-      <input type="text" id="item-image" />
-      <label for="item-stock">Item stock</label>
+      <!-- <input type="text" id="item-image" />
+      <label for="item-stock">Item stock</label> -->
       <input type="number" id="item-stock" />
     </div>
 
